# serverless-starlite-example

./: .gitignore  README.md  pyproject.toml  template.yaml
dependencies/: requirements.txt
src/: main.py
src/reports/: app.py
src/teams/: app.py
